// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering posts: Dropdown menu shows on click 1`] = `
"<article class=\\"post-container\\"><div class=\\"info-user-post\\"><div class=\\"info\\"><p class=\\"nameProfile-P\\"><strong>Eli</strong></p><p class=\\"userName-P\\">@DinoEli</p><span class=\\"date-P\\">· 01/04/2022</span><img class=\\"options-menu\\" src=\\"./assets/options.png\\" height=\\"20\\"></div></div><div class=\\"to-edit\\"><div class=\\"post-content\\">
    <div><img src=\\"./assets/open-book.png\\" class=\\"book-icon\\"><p><strong>  Test title</strong></p></div> <br>
    <p>Great book!</p>
    <div></div></div></div><div class=\\"like-btn\\" id=\\"like-btn\\"><img src=\\"./assets/like.png\\" alt=\\"like empty button\\"><span class=\\"likeCount\\">0</span></div><div class=\\"dropdown-container show\\" tabindex=\\"-1\\"><div class=\\"dropdown\\"><a href=\\"#\\" class=\\"editPost\\" id=\\"editPost\\"><div>Edit</div></a><a href=\\"#\\" class=\\"deletePost\\" id=\\"deletePost\\"><div>Delete</div></a></div></div></article>"
`;

exports[`Rendering posts: Edit function is executed properly on click 1`] = `
"<div id=\\"postsArea\\"><article class=\\"post-container\\"><div class=\\"info-user-post\\"><div class=\\"info\\"><p class=\\"nameProfile-P\\"><strong>Eli</strong></p><p class=\\"userName-P\\">@DinoEli</p><span class=\\"date-P\\">· 01/04/2022</span><img class=\\"options-menu\\" src=\\"./assets/options.png\\" height=\\"20\\"></div></div><div class=\\"to-edit\\"><form class=\\"edit-form\\"><div class=\\"post-content\\">
  <div><img src=\\"./assets/open-book.png\\" class=\\"book-icon\\"> <input type=\\"text\\" class=\\"reading-txt\\" name=\\"reading\\" value=\\"Test title\\"></div>
  <br>
  <textarea name=\\"txt\\" class=\\"reading-description\\" rows=\\"5\\">Great book!</textarea>
  <br>
  </div></form><input type=\\"button\\" id=\\"btn-save\\" value=\\"Save\\"></div><div class=\\"like-btn\\" id=\\"like-btn\\"><img src=\\"./assets/like.png\\" alt=\\"like empty button\\"><span class=\\"likeCount\\">0</span></div><div class=\\"dropdown-container show\\" tabindex=\\"-1\\"><div class=\\"dropdown\\"><a href=\\"#\\" class=\\"editPost\\" id=\\"editPost\\"><div>Edit</div></a><a href=\\"#\\" class=\\"deletePost\\" id=\\"deletePost\\"><div>Delete</div></a></div></div></article></div>"
`;

exports[`Rendering posts: Modal shows up after click on delete button 1`] = `
"<div id=\\"postsArea\\"><article class=\\"post-container\\"><div class=\\"info-user-post\\"><div class=\\"info\\"><p class=\\"nameProfile-P\\"><strong>Eli</strong></p><p class=\\"userName-P\\">@DinoEli</p><span class=\\"date-P\\">· 01/04/2022</span><img class=\\"options-menu\\" src=\\"./assets/options.png\\" height=\\"20\\"></div></div><div class=\\"to-edit\\"><div class=\\"post-content\\">
    <div><img src=\\"./assets/open-book.png\\" class=\\"book-icon\\"><p><strong>  Test title</strong></p></div> <br>
    <p>Great book!</p>
    <div></div></div></div><div class=\\"like-btn\\" id=\\"like-btn\\"><img src=\\"./assets/like.png\\" alt=\\"like empty button\\"><span class=\\"likeCount\\">0</span></div><div class=\\"dropdown-container show\\" tabindex=\\"-1\\"><div class=\\"dropdown\\"><a href=\\"#\\" class=\\"editPost\\" id=\\"editPost\\"><div>Edit</div></a><a href=\\"#\\" class=\\"deletePost\\" id=\\"deletePost\\"><div>Delete</div></a></div></div></article></div><div class=\\"modal show-modal\\" id=\\"modal\\"><div class=\\"modal-content\\"><span class=\\"close-button\\" id=\\"close-button\\">x</span><h2>Are you sure you want to delete this post?</h2><button class=\\"accept-btn\\" id=\\"accept-btn\\">Yes</button></div></div>"
`;

exports[`Rendering posts: a new post is created and properly rendered 1`] = `
"<article class=\\"post-container\\"><div class=\\"info-user-post\\"><div class=\\"info\\"><p class=\\"nameProfile-P\\"><strong>Eli</strong></p><p class=\\"userName-P\\">@DinoEli</p><span class=\\"date-P\\">· 01/04/2022</span></div></div><div class=\\"to-edit\\"><div class=\\"post-content\\">
    <div><img src=\\"./assets/open-book.png\\" class=\\"book-icon\\"><p><strong>  Test title</strong></p></div> <br>
    <p>Great book!</p>
    <div></div></div></div><div class=\\"like-btn\\" id=\\"like-btn\\"><img src=\\"./assets/like.png\\" alt=\\"like empty button\\"><span class=\\"likeCount\\">0</span></div></article>"
`;
